--- a/app/src/App.css
+++ b/app/src/App.css
@@ -96,7 +96,7 @@ body {
   background-color: black;
 }
 .color {
-  margin-right:1px;
+  margin-right:3px;
 }
 
 
@@ -115,6 +115,28 @@ body {
   border-top-right-radius:10px;
   border-bottom-right-radius:10px;
 }
+
+.drawer {
+  background-color: black;
+  margin-top:45px;
+  margin-bottom:30px;
+  margin-right: 40px;
+  margin-left:-10px;
+  border-top-right-radius : 10px;
+  border-bottom-right-radius : 10px;
+  padding:20px;
+}
+
+.number {
+  width:63px;
+  float:left;
+  padding-left:5px;
+  padding-right:5px;
+  margin-right:5px;
+  text-align: right;
+  background-color:orange;
+}
+
 
 #nowplaying {
   position:fixed;
