--- a/app/src/App.css
+++ b/app/src/App.css
@@ -96,6 +96,10 @@ body {
   margin-right: -60px;
 }
 
+.watch .drawerOpener {
+  height:80px;
+}
+
 .on, .off, .color {
   background-color: white;
   width:40px;
@@ -241,7 +245,8 @@ body {
   padding: 0;
   line-height: 0.75;
 }
-.griditem {
+.griditem
+{
   position: relative;
   grid-column: 2/6;
   color:#000;
@@ -256,12 +261,22 @@ body {
   border-top-right-radius:20px;
   border-bottom-right-radius:20px;
 }
+
+.watch .griditem {
+    min-height:200px;
+    padding-right:0px;
+}
+
 .name {
   font-size:18pt;
   margin-left: 10px;
   text-transform:uppercase;
   position: absolute;
   bottom:0px;
+}
+
+.watch .name {
+  font-size:36pt;
 }
 
 .gridfooter, .gridfooterbutton {
